@@ -1,5 +1,6 @@
 *Version 3.4.5*
 * Fix DateTimeZone default if user didn't specify one and is in certain locales
+* Fix bug with i18n translations from modules not being loaded in certain Log4j configurations
 
 *Version 3.4.4*
 * More HTML escapes
